2004-12-21  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/bmread.c: don't duplicate the period in the filename

	* main/dumpmine.c: Add function prototypes to remove warnings

2004-12-19  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/editor/eobject.c, main/editor/kgame.c,
	main/editor/segment.c, main/gameseg.h, main/physics.c: Pass the
	extra two parameters to get_seg_masks.

	* main/gamemine.c, main/gamemine.h, main/gamesave.c: Enable global
	structs for mine saving functions

	* main/inferno.c: Use PhysicsFS for making the hoard ham.

	* main/bmread.c: add missing includes

	* 3d/interp.c: add g3_uninit_polygon_model (doesn't do anything)

	* main/dumpmine.c: Fix type mismatches

2004-12-19  Bradley Bell  <btb@icculus.org>

	* ui/Makefile.am: fix ui Makefile.am

	* include/strutil.h, misc/strutil.c, main/bmread.c: implement
	removeext, use it in ds_load instead of splitpath

2004-12-19  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* include/u_mem.h: prototype for strdup with MPW

	* main/laser.c: abort weapon fire if unable to create object

	* include/ui.h, main/bm.c, main/dumpmine.c, main/editor/editor.h,
	main/editor/medwall.h, main/editor/segment.c, main/gamesave.c,
	unused/ui/icon.c: replace byte with sbyte

	* include/func.h, ui/barbox.c, ui/button.c, ui/checkbox.c,
	ui/file.c, ui/func.c, ui/gadget.c, ui/harderr.c, ui/icon.c,
	ui/inputbox.c, ui/keypad.c, ui/keypress.c, ui/keytrap.c,
	ui/listbox.c, ui/medfunc.c, ui/menu.c, ui/menubar.c, ui/message.c,
	ui/mouse.c, ui/number.c, ui/popup.c, ui/radio.c, ui/scroll.c,
	ui/ui.c, ui/uidraw.c, ui/userbox.c, ui/window.c,
	unused/ui/barbox.c, unused/ui/button.c, unused/ui/checkbox.c,
	unused/ui/file.c, unused/ui/func.c, unused/ui/func.h,
	unused/ui/gadget.c, unused/ui/harderr.c, unused/ui/icon.c,
	unused/ui/inputbox.c, unused/ui/keypad.c, unused/ui/keypress.c,
	unused/ui/keytrap.c, unused/ui/listbox.c, unused/ui/medfunc.c,
	unused/ui/menu.c, unused/ui/menubar.c, unused/ui/message.c,